# cyberlogger

./: .clang-format  .gitignore  README.md  TODO.txt  makefile  meson.build  meson.options  test.txt
src/cyberlogger/: cyberlogger.hpp  meson.build
src/cyberlogger/destinations/: destination_interface.hpp  filedestination.hpp  streamdestination.hpp
src/cyberlogger/formatter/: consoleformatter.hpp  fileformatter.hpp  format_interface.hpp
src/cyberlogger/logger/: logger.cpp  logger.hpp
src/cyberlogger/loglevel/: loglevel.cpp  loglevel.hpp  loglevel_colours.hpp  loglevel_interface.hpp
src/cyberlogger/logs/: easy_logentry.hpp  logentry.hpp
src/cyberlogger/queue/: queue.cpp  queue.hpp
src/cyberlogger/util/: simplesetup.cpp  simplesetup.hpp  singletonwrap.hpp  threadname.hpp
test/: logger_test.cpp  meson.build  test.cpp
